force-app/main/default/objects/BMCServiceDesk__Configuration_Set_Log_Details__c/BMCServiceDesk__Configuration_Set_Log_Details__c.object-meta.xml
<CustomObject>
    <label>Configuration Set Log Details</label>
    <nameField>
        <label>Configuration Set Log Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Set Log Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>