force-app/main/default/objects/BMCServiceDesk__Configuration_Set_Log_Details__c/fields/BMCServiceDesk__Configuration_Set_Log__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Configuration_Set_Log__c</fullName>
    <description>Master record for all imported/reused records during which Import is done.</description>
    <label>Configuration Set Log</label>
    <referenceTo>BMCServiceDesk__Configuration_Set_Log__c</referenceTo>
    <relationshipLabel>Configuration Set Log Details</relationshipLabel>
    <relationshipName>Configuration_Set_Log_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>