force-app/main/default/objects/BMCServiceDesk__Configuration_Set_Log_Details__c/fields/BMCServiceDesk__Details__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Details__c</fullName>
    <description>To store more details of record while importing.</description>
    <label>Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>