force-app/main/default/objects/BMCServiceDesk__Configuration_Set_Log_Details__c/fields/BMCServiceDesk__DML_Operation__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__DML_Operation__c</fullName>
    <description>To store which type of DML operation is performed, record created, updated or used existing while importing.</description>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
            <value>
                <fullName>Reused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>