force-app/main/default/objects/BMCServiceDesk__Configuration_Set_Log_Details__c/fields/BMCServiceDesk__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Record_Id__c</fullName>
    <description>Store record Id which is created/updated or reused while importing records.</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>