force-app/main/default/objects/BMCServiceDesk__Configuration_Set_Log_Details__c/fields/BMCServiceDesk__Record_Name__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Record_Name__c</fullName>
    <description>Store record name which is created/updated or reused while importing records.</description>
    <label>Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>