force-app/main/default/objects/BMCServiceDesk__Configuration_Set_Log_Details__c/fields/BMCServiceDesk__RF_Metadata_Type__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RF_Metadata_Type__c</fullName>
    <description>To represent on which Remedyforce object DML is performed or reused while importing.</description>
    <label>RF Metadata Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>Base Element</fullName>
            </value>
            <value>
                <fullName>Template</fullName>
            </value>
            <value>
                <fullName>Request Definition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>